tests/ui/feature-gates/feature-gate-fused-attribute.stderr
error[E0658]: the `#[fused]` attribute is an experimental feature
  --> $DIR/feature-gate-fused-attribute.rs:3:1
   |
LL | #[fused]
   | ^^^^^^^^
   |
   = note: see issue #147129 <https://github.com/rust-lang/rust/issues/147129> for more information
   = help: add `#![feature(fused_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
