tests/ui/feature-gates/feature-gate-fused-attribute.rs
//@ edition: 2024

#[fused] //~ ERROR: the `#[fused]` attribute is an experimental feature
async fn foo() -> &'static str {
    "hello"
}

fn main() {}
